crates/monochange/tests/snapshots/github_releases__multiline_manifest_changelogs_1__rendered@group_filtered.snap
---
source: crates/monochange/tests/github_releases.rs
expression: contents
---
## [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/v1.1.0) ([DATE])

### Features

- **add feature.**
